--- a/Services/templates/Services/Services.html
+++ b/Services/templates/Services/Services.html
@@ -37,7 +37,7 @@
         <div class="row">
             {% for Service in Service.all %}
             <div class="col-md-6">
-                <a href="product.html" class="productLink">
+                <a href="{% url 'Product' Service.id %}" class="productLink">
                     <div class="zoom">
                         <div class="probootstrap-service-2 probootstrap-animate">
                             <div class="image">
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                             <div class="text">
-                                <h3>{{ Service.title }}</h3>
+                                <h3>{{ Service.category }}</h3>
                                 <p>{{ Service.description }}</p>
                             </div>
                         </div>
