Blog front page admin finished, details left

--- a/About/templates/About/About.html
+++ b/About/templates/About/About.html
@@ -5,14 +5,15 @@
 {% endblock %}
 
 {% block content %}
+{% for Slider in Slider.all %}
 <section class="flexslider">
     <ul class="slides">
-        <li style="background-image: url(img/slider_1.jpg)" class="overlay">
+        <li style="background-image: url({{Slider.image.url}})" class="overlay">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="probootstrap-slider-text text-center">
-                            <h1 class="probootstrap-heading">About Us</h1>
+                            <h1 class="probootstrap-heading">{{Slider.text}}</h1>
                         </div>
                     </div>
                 </div>
@@ -21,7 +22,7 @@
 
     </ul>
 </section>
-
+{% endfor %}
 <section class="probootstrap-section probootstrap-bg-white">
     <div class="container">
         {% for Segment in Segment.all %}
