--- a/Clients/templates/Clients/Clients.html
+++ b/Clients/templates/Clients/Clients.html
@@ -7,17 +7,19 @@
 {% block content %}
 <section class="flexslider">
     <ul class="slides">
-        <li style="background-image: url(img/slider_1.jpg)" class="overlay">
+        {% for clientSlider in clientSlider.all %}
+        <li style="background-image: url({{clientSlider.image.url}})" class="overlay">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="probootstrap-slider-text text-center">
-                            <h1 class="probootstrap-heading">Our Clients</h1>
+                            <h1 class="probootstrap-heading">{{clientSlider.text}}</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </li>
+        {% endfor %}
     </ul>
 </section>
 <section class="probootstrap-section probootstrap-bg-white">
